--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   speech_to_text: ^7.0.0
   characters: ^1.3.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
