--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: spendwise
-description: "A new Flutter project."
+description: "SpendSense: Smart expense tracking app."
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -10,9 +10,12 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  speech_to_text: ^7.0.0
-  characters: ^1.3.0
   http: ^1.2.2
+  characters: ^1.3.0
+  speech_to_text: ^7.0.0
+  flutter_secure_storage: ^9.0.0
+  provider: ^6.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -25,4 +28,3 @@ flutter:
   assets:
     - assets/puzzle.jpg
     - assets/pet_happy.gif
-    # - assets/
