--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   provider: ^6.1.2
   intl: ^0.19.0
+  permission_handler: ^11.0.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
