--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.19.0
   permission_handler: ^11.0.0
   shared_preferences: ^2.2.0
+  flutter_sms_inbox: ^1.0.4
 
 dev_dependencies:
   flutter_test:
