--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   permission_handler: ^11.0.0
   shared_preferences: ^2.2.0
   flutter_sms_inbox: ^1.0.4
+  url_launcher: ^6.2.5
+  flutter_contacts: ^1.1.7
 
 dev_dependencies:
   flutter_test:
