--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,10 +4,14 @@
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
     <!-- Contacts permission for inviting friends -->
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <!-- Notification permissions -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
     
     <application
          android:name="${applicationName}"
-    android:label="SpendWise"
+    android:label="SpendSense"
     android:usesCleartextTraffic="true"
     android:icon="@mipmap/ic_launcher">
         <activity
