--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,13 @@ dependencies:
   shared_preferences: ^2.2.2
   
   # App Info
-  installed_apps: ^1.3.6
+  installed_apps: 1.5.0
   device_apps: ^2.2.0
   
   # Permissions & Settings
   app_settings: ^5.1.1
   usage_stats: ^1.3.0
-  android_intent_plus: ^4.0.0
+  android_intent_plus: ^6.0.0
   
   # Notifications
   flutter_local_notifications: ^18.0.0
